# Controlador-Robot

./: CMakeLists.txt  Cliente.cpp  README.md  Servidor.cpp  cliente.cpp  inferenceTest.cpp  servidor.cpp
headers/: CameraSprite.h  CarController.h  ClientWindow.h  DigitalHBridge.h  DigitalOutput.h  EncodeParams.h  HW039Controller.h  InferenceData.h  Inferencer.h  InferencerCamera.h  JoystickCircle.h  MLX90640_API.h  OutputPin.h  PWMHBridge.h  PWMOutput.h  PredictionsData.h  PredictorCamera.h  RobotCamera.h  ServerParams.h  ThermalCamera.h  ThermalCameraVisualizer.h  WiFiDeserializer.h  WiFiInferencerCamera.h  WiFiInferencerCameraReceiver.h  WiFiPredictorCamera.h  WiFiPredictorCameraReceiver.h  WiFiRobotCamera.h  WiFiRobotCameraReceiver.h  WiFiSerializer.h  WiFiThermalCamera.h  WiFiThermalCameraReceiver.h  WiFiXbox.h  WiFiXboxReceiver.h  XboxController.h  XboxControllerData.h  YOLOv8Model.h  inference.h
sources/: CameraSprite.cpp  CarController.cpp  ClientWindow.cpp  DigitalHBridge.cpp  DigitalOutput.cpp  HW039Controller.cpp  Inferencer.cpp  InferencerCamera.cpp  JoystickCircle.cpp  OutputPin.cpp  PWMHBridge.cpp  PWMOutput.cpp  PredictorCamera.cpp  RobotCamera.cpp  ThermalCamera.cpp  ThermalCameraVisualizer.cpp  WiFiDeserializer.cpp  WiFiInferencerCamera.cpp  WiFiInferencerCameraReceiver.cpp  WiFiPredictorCamera.cpp  WiFiPredictorCameraReceiver.cpp  WiFiRobotCamera.cpp  WiFiRobotCameraReceiver.cpp  WiFiSerializer.cpp  WiFiThermalCamera.cpp  WiFiThermalCameraReceiver.cpp  WiFiXbox.cpp  WiFiXboxReceiver.cpp  XboxController.cpp  YOLOv8Model.cpp  inference.cpp
tests/: inferenceTest.cpp
tests/cliente/: clienteCarControllerTest.cpp  clienteThermalCamera.cpp  clienteWiFiCameraTest.cpp
tests/servidor/: servidorCarControllerTest.cpp  servidorThermalCamera.cpp  servidorWiFiCameraTest.cpp  servidorXboxControllerTest.cpp
